# FedericoAureliano.github.io

./: .gitignore  LICENSE.md  README.md  build.sh  cv.md  index.html  index.md  main.bib  pyproject.toml  requirements.txt  setup.sh
data/: README.md  auto_links.json  auto_notes.json  education.json  mentoring.json  meta.json  news.json  profile.json  publications.bib  style.json
docs/: CNAME  README.md  cv.html  dark.css  index.html  light.css  news.html  pubs.html
docs/blog/: blog.css  seq.html
docs/cv/: Makefile  cv.bib  cv.tex  federico_cv.cls
docs/papers/: akhundovATVA21.html  berzishCAV21.html  berzishTCS22.html  berzishWORDS21.html  blotskyCAV18.html  fengASE20.html  liSYNT23.html  moraASE18.html  moraFM21.html  moraNeurIPS24.html  moraOOPSLA23.html  moraSYNT20.html  pimpalkhareSAT21.html  polgreenCAV22.html  (+3 more)
filters/: cv.py  index.py  news.py  profile.py  publications.py  sections.py
papers/: akhundovATVA21.md  berzishCAV21.md  berzishTCS22.md  berzishWORDS21.md  blotskyCAV18.md  fengASE20.md  liSYNT23.md  moraASE18.md  moraFM21.md  moraNeurIPS24.md  moraOOPSLA23.md  moraSYNT20.md  pimpalkhareSAT21.md  polgreenCAV22.md  scottFM21.md  scottVSTTE20.md  shahAAAI24.md
posts/: algaroba-smtcomp.md  amar-shah-src.md  demetri-angelakos-award.md  dissertation.md  haley-lepe-stem-award.md  neurips-2025-expo-demo.md  outstanding-gsi-award.md  outstanding-ta-award.md  peer-mentor-award.md  periodicals-map.md  pldi23-competition.md  popl20-competition.md  qualcomm-fellowship.md  quals-passed.md  waterloo-job.md
style/: main.css
templates/: README.md  cv.html  cv.latex  dark.css  footer.html  head.html  index.html  light.css  main.css  mode.js  news-item.html  paper.html  post.html  scroller.html  scroller.js  selected.html
tests/: __init__.py
(+22 files in other folders)
